--- a/temp.tex
+++ b/temp.tex
@@ -115,16 +115,71 @@
 \clearpage 
 
 \section{Постановка задачи}
-	\quad\,\,\,Целью данной работы является построение модели нейрокомпьютерного интерфейса для управления движением динамического объекта в некотором направлении. Каждому из рассматриваемых направлений соответствует некоторая метка класса.
+	\quad\,\,\,Целью данной работы является построение модели нейрокомпьютерного интерфейса для управления движением динамического объекта в некотором направлении с использованием доступного устройства {\it Emotiv EPOC}. Каждому из рассматриваемых направлений соответствует некоторая метка класса.
  	\par Пусть имеется $M$ сенсоров, в моменты времени $1, 2, \dots, t, \dots$ $i$-ый сенсор фиксирует значения $x^i(t)$, $i = \overline{1,M}.$ Требуется определить класс регистрируемого в произвольный момент времени $t$ сигнала. Зачастую полагают, что многомерный сигнал разбит на отрезки известной длины $T$, на протяжении каждого из которых класс сигнала остаётся неизменным. Везде далее будем придерживаться данного предположения.
 	\par Дадим формальную математическую постановку задачи.
 	\par Имеется пространство объектов $\mathcal{X} \subset \mathbb{R}^{M \times T}$, каждый из которых представляет собой сигнал, зафиксированный при помощи $M$ сенсоров в течение периода времени длины $T$, и конечное множество имён классов $\mathcal{Y}, \, |\mathcal{Y}| = N$. Существует целевая зависимость $y^*: \mathcal{X} \to \mathcal{Y},$ значения которой известны только на объектах обучающей выборки $X^L = \{ (x^i, y^i)\}_{i=1}^L, \, x^i \in \mathcal{X} \subset \mathbb{R}^{M \times T}, \, y^i = y^*(x^i) \in \mathcal{Y}, \, L$ -- количество объектов обучающей выборки. Требуется построить алгоритм классификации $a: \mathcal{X} \to \mathcal{Y},$ аппроксимирующий целевую зависимость $y^*(x)$ на всем множестве $\mathcal{X}$ в соответствии с некоторым введённым функционалом качества.
 
 \clearpage 
 
-\section{Обзор методов}
-	\par TODO: Переименовать раздел и вставить ссылки на источники
-	\par Образование и колебание потенциалов головного мозга является результатом физико-химических процессов, лежащих в основе обмена веществ в нервной ткани.
+\section{Используемое оборудование}
+	\quad\,\,\, Нейрокомпьютерный интерфейс -- средство коммуникации, транслирующее активность головного мозга в действия либо команды для электронных устройств. Фиксация подобного рода активности становится возможной вследствие физико-химических процессов, лежащих в основе обмена веществ в нервной ткани, порождающих колебания потенциалов головного мозга. Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикограмма, электроокулограмма и др.), в настоящее время основным способом получения сигнала головного мозга является электроэнцефалограмма. 
+	\par {\it Электроэнцефалография (ЭЭГ)} — раздел электрофизиологии, изучающий закономерности суммарной электрической активности мозга, отводимой с поверхности кожи головы или мозга, а также метод записи таких потенциалов. Получение электроэнцефалограммы осуществляется с помощью электроэнцефалографа. Существуют различные устройства для записи ЭЭГ, отличающиеся следующими характеристиками: 
+	\begin{itemize}\itemsep0pt
+	\item
+	характеристики принимающего сигнала (частота, количество шума в сигнале);
+	\item
+	инвазивность (степень имплантирования электродов в кору головного мозга);
+	\item
+	количество электродов;
+	\item
+	покрываемая площадь (среднее количество влияющих на сигнал нейронов, снимаемых одним электродом).
+	\end{itemize}
+	\par По инвазивности устройства делятся на {\it погружные}, {\it частично-погружные} и {\it непогружные} в зависимости от расположения электродов (электроды вживлены в мозг/сращены с нервами, находятся на поверхности мозга/рядом с нервами или находятся на поверхности кожи головы соответственно).
+
+	\par Устройства с непогружным интерфейсом делятся на {\it мокрые} и {\it сухие} в зависимости от того, необходимо ли смачивание электродов проводящей жидкостью для осуществления контакта.
+	\par По типу электродов устройства делятся на {\it пассивные} и {\it активные} в зависимости от того, проивзодится ли после снятия электродом сигнала его первичная обработка.
+
+	
+	\par В настоящей работе для записи электроэнцефалограммы использовалось устройство {\it Emotiv EPOC}. Это устройство было разработано австралийской компанией {\it Emotiv Systems}, основанной в 2003 году. Данная компания входит в число трёх основных участников рынка потребительских устройств BCI наряду с компаниями {\it NeuroSky} и {\it OCZ}, однако {\it Emotiv EPOC} имеет значительно большее число электродов, чем устройства компаний-конкурентов, и незначительно более высокую стоимость. 
+	\par Общий вид устройства изображён на рис.~\ref{Emotiv}, устройство обладает следующими характеристиками:
+	\begin{itemize}\itemsep0pt
+	\item
+	число датчиков — 14;
+	\item
+	тип датчиков — пассивные, мокрые;
+	\item
+	частота дискретизации — 128 Гц;
+	\item
+	способ связи — беспроводная радиосвязь;
+	\item
+	гироскопы — 2 шт.;
+	\item
+	инвазивность — непогружной.
+	\end{itemize}
+
+	\begin{figure}[H]
+	\center{\includegraphics[width=0.9\textwidth]{Emotiv.jpg}}
+	\caption{{\it Emotiv EPOC} ~--- устройство, используемое для записи данных.}
+	\label{Emotiv}
+	\end{figure}
+
+	\par Расположение электродов согласно международной системе размещения электродов <<10 -- 20>> изображено на рис.~\ref{electrode_map}.
+	\par Устройство {\it Emotiv EPOC} было использовано в силу своей доступности. Также достоинствами данного устройства являются портативность, простота использования и небольшие размеры. В то же время оно обладает и рядом недостатков: низкая точность снимаемого сигнала и ненадёжная фиксация устройства на голове человека. В рамках настоящей работы будет предпринята попытка купировать недостатки устройства применяемыми методами обработки и классификации сигнала.
+
+	\begin{figure}[H]
+	\center{\includegraphics[width=0.9\textwidth]{electrode_map_1020.png}}
+		\caption{Расположение электродов на голове человека согласно международной системе размещения электродов <<10--20>>. Электроды устройства {\it Emotiv EPOC} выделены оранжевым цветом.}
+	\label{electrode_map}
+	\end{figure}
+
+%	\par TODO: Нужен ли отдельный раздел для Хиперы? Если да, то как назвать этот раздел и раздел про Хиперу?
+%	\par В качестве динамического объекта, приводимого в движение при помощи ментальных команд, было использовано устройство {\it Khepera II}. Данное устройство было разработано швейцарской компанией {\it K-team Corporation}.
+%	\par Устройство оснащено двумя моторами, приводящими в движение колёса по бокам робота. Устройство управляется путём осуществления команд установки либо изменения скоростей вращения каждого из моторов. (TODO: Нужно ли писать детали о том, как подключается робот к компьютеру, какими командами управляется и т.д.?) Таким образом, имеется возможность осуществления прямолинейного движения либо поворота устройства в плоскости его движения, тем самым команды поворота по и против часовой стрелке на фиксированный угол относительно текущей траектории позволяют управлять движением устройства на плоскости без остановки. Если же, помимо того, использовать команды начала движения и остановки устройства, появится возможность полного управления устройством при движении на плоскости.
+
+\section{Введение в нейрокомпьютерные интерфейсы}
+	\par TODO: Вставить ссылки на источники
+	\par Главная цель исследований в области нейрокомпьютерных интерфейсов -- разработка систем, позволяющих обездвиженным пользователям обмениваться информацией и взаимодействовать с другими людьми, а также контролировать различные элементы их окружения. Кроме того, подобные системы могут быть использованы для улучшения контроля над сложными многозадачными операциями.
 	\par В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
 
 	\begin{figure}[H]
@@ -222,60 +277,6 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 \newpage
 
 \section{Проведение эксперимента?}
-	\subsection{Используемое оборудование}
-	\quad\,\,\, Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикограмма, электроокулограмма и др.), в настоящее время основным способом получения сигнала головного мозга является электроэнцефалограмма. 
-	\par {\it Электроэнцефалография (ЭЭГ)} — раздел электрофизиологии, изучающий закономерности суммарной электрической активности мозга, отводимой с поверхности кожи головы или мозга, а также метод записи таких потенциалов. Получение электроэнцефалограммы осуществляется с помощью электроэнцефалографа. Существуют различные устройства для записи ЭЭГ, отличающиеся следующими характеристиками: 
-	\begin{itemize}\itemsep0pt
-	\item
-	характеристики принимающего сигнала (частота, количество шума в сигнале);
-	\item
-	инвазивность (степень имплантирования электродов в кору головного мозга);
-	\item
-	количество электродов;
-	\item
-	покрываемая площадь (среднее количество влияющих на сигнал нейронов, снимаемых одним электродом).
-	\end{itemize}
-	\par По инвазивности устройства делятся на {\it погружные}, {\it частично-погружные} и {\it непогружные} в зависимости от расположения электродов (электроды вживлены в мозг/сращены с нервами, находятся на поверхности мозга/рядом с нервами или находятся на поверхности кожи головы соответственно).
-
-	\par Устройства с непогружным интерфейсом делятся на {\it мокрые} и {\it сухие} в зависимости от того, необходимо ли смачивание электродов проводящей жидкостью для осуществления контакта.
-	\par По типу электродов устройства делятся на {\it пассивные} и {\it активные} в зависимости от того, проивзодится ли после снятия электродом сигнала его первичная обработка.
-
-	
-	\par В настоящей работе для записи электроэнцефалограммы использовалось устройство {\it Emotiv EPOC}. Это устройство было разработано австралийской компанией {\it Emotiv Systems}, основанной в 2003 году. Данная компания входит в число трёх основных участников рынка потребительских устройств BCI наряду с компаниями {\it NeuroSky} и {\it OCZ}, однако {\it Emotiv EPOC} имеет значительно большее число электродов, чем устройства компаний-конкурентов, и незначительно более высокую стоимость. 
-	\par Общий вид устройства изображён на рис.~\ref{Emotiv}, устройство обладает следующими характеристиками:
-	\begin{itemize}\itemsep0pt
-	\item
-	число датчиков — 14;
-	\item
-	тип датчиков — пассивные, мокрые;
-	\item
-	частота дискретизации — 128 Гц;
-	\item
-	способ связи — беспроводная радиосвязь;
-	\item
-	гироскопы — 2 шт.;
-	\item
-	инвазивность — непогружной.
-	\end{itemize}
-
-	\begin{figure}[H]
-	\center{\includegraphics[width=0.9\textwidth]{Emotiv.jpg}}
-	\caption{{\it Emotiv EPOC} ~--- устройство, используемое для записи данных.}
-	\label{Emotiv}
-	\end{figure}
-
-	\par Расположение электродов согласно международной системе размещения электродов <<10 -- 20>> изображено на рис.~\ref{electrode_map}.
-	\par Устройство {\it Emotiv EPOC} было использовано в силу своей доступности. Также достоинствами данного устройства являются портативность, простота использования и небольшие размеры. В то же время оно обладает и рядом недостатков: низкая точность снимаемого сигнала и ненадёжная фиксация устройства на голове человека. В рамках настоящей работы будет предпринята попытка купировать недостатки устройства применяемыми методами обработки и классификации сигнала.
-
-	\begin{figure}[H]
-	\center{\includegraphics[width=0.9\textwidth]{electrode_map_1020.png}}
-		\caption{Расположение электродов на голове человека согласно международной системе размещения электродов <<10--20>>. Электроды устройства {\it Emotiv EPOC} выделены оранжевым цветом.}
-	\label{electrode_map}
-	\end{figure}
-
-%	\par TODO: Нужен ли отдельный раздел для Хиперы? Если да, то как назвать этот раздел и раздел про Хиперу?
-%	\par В качестве динамического объекта, приводимого в движение при помощи ментальных команд, было использовано устройство {\it Khepera II}. Данное устройство было разработано швейцарской компанией {\it K-team Corporation}.
-%	\par Устройство оснащено двумя моторами, приводящими в движение колёса по бокам робота. Устройство управляется путём осуществления команд установки либо изменения скоростей вращения каждого из моторов. (TODO: Нужно ли писать детали о том, как подключается робот к компьютеру, какими командами управляется и т.д.?) Таким образом, имеется возможность осуществления прямолинейного движения либо поворота устройства в плоскости его движения, тем самым команды поворота по и против часовой стрелке на фиксированный угол относительно текущей траектории позволяют управлять движением устройства на плоскости без остановки. Если же, помимо того, использовать команды начала движения и остановки устройства, появится возможность полного управления устройством при движении на плоскости.
 
 \subsection{Парадигма эксперимента}
 	\par Как правило, в исследованиях на основе визуальных стимулов используется следующая схема получения данных:
@@ -310,41 +311,42 @@ $$x = Wt + \mu = t_1 {\textbf w_1} + \dots + t_d {\textbf w_d} + \mu,$$
 	Кроме того, также проводится 4 эпохи для записи данных, отвечающих спокойному состоянию испытуемого, т.е. испытуемый расслаблен, а визуальные стимулы не выделяются.
 	\item
 	Таким образом, количество отвлекающих эпох составляет 100. ...
-	\par Для агрегатной схемы всё то же самое, но 15 раундов.
-	
-\subsection{Предобработка}
-	
+	\par Для агрегатной схемы всё то же самое, но 15 раундов.	
 	\end{itemize}
+
+\subsection{Предобработка}
+	\par Перед обучением классификатора над данными была произведена предобработка. Мы следуем наиболее часто используемым операциям, которые описаны в (Пиччоне), которые были использованы в порядке, описанном ниже
+	\begin{itemize}
+	\item
+	{\bf Обнуление среднего}
+	\par В первую очередь все данные, полученные с каждого электрода, были центрированы к нулевому среднему, чтобы нейтрализовать действие постоянного амплитудного смещения. Затем среднее значение сигналов, полученных с электродов сравнения, было использовано для референциального монтажа данных. В положении устройства по умолчанию в качестве электродов сравнения были использованы позиции AF3 и AF4, в инверсированном - O1 и O2.
+	\item
+	{\bf Выделение отдельных проб}
+	\par После этого из полученных данных были выделены отдельные пробы продолжительности 1500 мс. Начало пробы совпадало с началом выделения визуального стимула на экране компьютера, конец пробы приходился на момент через 1500 мс после начала выделения стимула (250 мс выделения визуального стимула и 1250 мс ожидания). Таким образом, для дальнейшей обработки и определения наличия P300-волн имеются данные, представленные в виде потенциалов, зарегистрированных для 192 моментов времени для каждого из сенсоров после выделения каждого из визуальных стимулов.
+	\item
+	{\bf Фильтрация}
+	\par Были предприняты попытки использовать несколько типов цифровых фильтров для обработки полученных сигналов: полосно-пропускной фильтр Чебышева 4ого порядка 1ого типа, эллиптический полосно-пропускной фильтр, фильтр с конечной импульсной характеристикой.
+	\item
+	{\bf ICA}
+	\par К данным ЭЭГ, подвергнутым фильтрации, был применен метод независимых компонент для извлечения независимых источников регистрируемого потенциала.
+	\item
+	{\bf Отбор признаков}
+	\par В (Пиччоне) был использован fuzzy control method для отбора признаков, наиболее точно отбирающие независимые компоненты, похожие на P300-волны, для дальнейшей классификации. Другие исследования используют неавтоматический метод отбора признаков. Поскольку в данной работе используется коммерческое BCI-устройство с высоким уровнем шума в получаемых данных, нет возможности ожидать наличия среди полученных независимых компонент наличие близкой к P300-волне, наподобие полученных в исследовании (Пиччоне). Кроме того, данный метод существенно увеличивает время обработки данных. В исследовании (Ванг и Джемс) показано, что результирующие компоненты ICA, отличные от P300-волн, практически неотличимы для целевых и нецелевых проб, поскольку они являются компонентами одних и тех же источников артефактов в одинаковых условиях. Для первого подхода к компонентам, полученные при помощи метода независимых компонент, применяется дискретное вейвлет-преобразование 3его порядка, где коэффициенты аппроксимации представляют собой  энергию сигнала в полосе P300-волн, включающих энергию сигнала в дельта-, тета- и части альфа-ритмов, как предложено в некоторых исследованиях. Для второго подхода ДВП применяется непосредственно к данным ЭЭГ. Для обоих подходов был использован вейвлет Добеши, поскольку он широко распространён в литературе для подобных целей. Результирующие коэффициенты аппроксимации были использованы в качестве результирующих признаков и были конкатенированы в единые вектора. Результирующая размерность признакового представления объектов равнялась $N_e \times N_f,$ где $N_e$ -- количество компонент или электродов, $N_f$ - количество признаков в одной пробе. Кроме аппроксимирующих коэффициентов, были также использованы 9 морфологических коэффициентов. Таким образом, $N_f = 18 + 9 = 27.$
+	\item
+	{\bf Нормировка}
+	\par Отобранные признаки нормировались .....
+
+\subsection{Классификация}
+	\par После предобработки и выделения признаков проводится обучение классификатора и валидация, как описано выше. ....
+
+	\end{itemize}
+Тестирование в режиме реального времени
+	\par ляляля
+
 \newpage
-\section{Новые подходы и результаты}
 
-Название этого раздела обязательно надо заменить на~содержательное. 
-В~этом разделе, как правило, много подразделов. 
-
-В~дипломной работе не~стоит делать более двух уровней,
-достаточно разделов и~подразделов.
-Будете писать диссертацию или монографию~--- сделаете три уровня. 
-  
-\section{Вычислительные эксперименты}
-
-Цель данного раздела:
-продемонстрировать, что предложенная теория работает на практике;
-показать границы её применимости;
-рассказать о~новых экспериментальных фактах.
-
-Чисто теоретические работы могут вообще не~содержать раздела экспериментов
-(не~работает, ну и~не~надо~--- зато теория красивая).
-Кстати, теоретики имеют право не~догадываться, где, кому и~когда их теории пригодятся.
-
-\subsection{Исходные данные и~условия эксперимента}
-Описывается прикладная задача, параметры анализируемых данных 
-(например, сколько объектов, сколько признаков, каких они типов), 
-параметры эксперимента 
-(например, как производился скользящий контроль). 
-
-\subsection{Результаты эксперимента}
-Результаты экспериментов представляются в~виде таблиц и~графиков. 
-Объясняется точный смысл всех обозначений на графиках, строк и~столбцов в~таблицах. 
+\section{Результаты}
+	\par 
 
 \subsection{Обсуждение и~выводы}
 Приводятся выводы: 
