Типы сигналов, изменила структуру

--- a/temp.tex
+++ b/temp.tex
@@ -107,7 +107,7 @@
 \end{abstract}
 
 \newpage
-\section*{Введение}
+\section{Введение}
 	\quad\,\,\,Нейрокомпьютерный интерфейс (англ. {\it brain-computer interface, mind-machine interface, brain–machine interface}, интерфейс «мозг-компьютер», зачастую используется сокращение {\it BCI}) ~--- специальный вид интерфейса, созданный для обмена информацией между мозгом и средствами вычислительной техники. Одной из задач, стоящих перед исследователями, работающими в данной области, является создание устройств, которые позволят людям с утраченными способностями организма полноценно взаимодействовать с окружающим миром. Управление объектами реального мира при помощи ментальных команд может открыть новые возможности для парализованных людей. 
 	\par В последние годы ведётся активная разработка различных практических приложений с использованием интерфейса «мозг-компьютер». Многие исследовательские группы по всему миру занимаются тематикой BCI, и в разработке многих направлений тематики имеются заметные успехи, однако до сих пор существует масса сложностей в практическом применении нейрокомпьютерного интерфейса.
 	\par TODO: В данной работе рассматриваются методы того-то и того, приведено то-то и то-то, расписать по главам... (в последнюю очередь)
@@ -122,8 +122,10 @@
 
 \clearpage 
 
-\section{Используемое оборудование}
-	\quad\,\,\, Нейрокомпьютерный интерфейс -- средство коммуникации, транслирующее активность головного мозга в действия либо команды для электронных устройств. Фиксация подобного рода активности становится возможной вследствие физико-химических процессов, лежащих в основе обмена веществ в нервной ткани, порождающих колебания потенциалов головного мозга. Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикограмма, электроокулограмма и др.), в настоящее время основным способом получения сигнала головного мозга является электроэнцефалограмма. 
+\section{Введение в нейрокомпьютерные интерфейсы}
+	\subsection{Используемое оборудование}
+	\par Главная цель исследований в области нейрокомпьютерных интерфейсов -- разработка систем, позволяющих обездвиженным пользователям обмениваться информацией и взаимодействовать с другими людьми, а также контролировать различные элементы их окружения. Кроме того, подобные системы могут быть использованы для улучшения контроля над сложными многозадачными операциями.
+	\par Нейрокомпьютерный интерфейс -- средство коммуникации, транслирующее активность головного мозга в действия либо команды для электронных устройств. Фиксация подобного рода активности становится возможной вследствие физико-химических процессов, лежащих в основе обмена веществ в нервной ткани, порождающих колебания потенциалов головного мозга. Несмотря на то что существует множество различных методов фиксации активности головного мозга (электрокортикограмма, электроокулограмма и др.), в настоящее время основным способом получения сигнала головного мозга является электроэнцефалограмма. 
 	\par {\it Электроэнцефалография (ЭЭГ)} — раздел электрофизиологии, изучающий закономерности суммарной электрической активности мозга, отводимой с поверхности кожи головы или мозга, а также метод записи таких потенциалов. Получение электроэнцефалограммы осуществляется с помощью электроэнцефалографа. Существуют различные устройства для записи ЭЭГ, отличающиеся следующими характеристиками: 
 	\begin{itemize}\itemsep0pt
 	\item
@@ -173,14 +175,69 @@
 	\label{electrode_map}
 	\end{figure}
 
+	\subsection{Типы нейрофизиологических сигналов}
+	\par Предполагается, что идеальный нейрокомпьютерный интерфейс будет напрямую транслировать каждое намерение пользователя и выполнять соответствующее действие. Однако чётко определение того, как соотносятся друг с другом намерения пользователя и нейрофизиологические сигналы, является нетривиальной задачей. На сегодняшний день это является одной из основных причин ограниченности свободы действий в существующих системах BCI.
+	\par TODO: Про частоты?
+	\par Для возможности распознавания различных нейрофизиологических сигналов и возможности сопоставления подобного рода сигналов и подразумеваемых действий необходимо осознанное управление активностью головного мозга. В основном, для достижения этой цели используются два подхода. При использовании первого подхода испутыемые должны наблюдать набор стимулов нейрокомпьютерного интерфейса, и контроль мозговой активности осуществляется путём концентрации на одном конкретном стимуле. Изменения в нейрофизиологических сигналах в результате различий между стимулами называются {\it вызванными потенциалами} (англ. event-related potentials, ERPs). При использовании второго подхода пользователи управляют мозговой активностью путём концентрации на определённом ментальном задании, например, представление определённого движения руки может быть использовано для изменения активности в соответствующей части скальпа.
+		\subsubsection{Вызванные потенциалы}
+	\par Вызванный потенциал — электрическая реакция мозга на внешний раздражитель или на выполнение умственной (когнитивной) задачи. Потенциалы данного вида имеют место в течение определённого промежутка времени после наблюдения стимула.
+	\begin{itemize}
+	\item
+	{\bf Волны P300}
+	\par Волна P300 -- положительное отклонение сигнала ЭЭГ, имеющее место ориентировочно через 300 мс после демонстрации редко появляющегося стимула, связанного с некоторым заданием. Для порождения подобного рода волн испытуемый должен пронаблюдать последовательность двух видом стимулов. Первый тип стимулов (т.н. {\it целевые} стимулы) являются редкими в последовательности стимулов, в то время как стимулы другого типа (т.н. {\it отвлекающие} стимулы) являются более частыми. Таким образом, во время появления целевого стимула может быть зафиксирована мозговая активность, содержащая волны P300. Данный принцип был использован (фарвелл и дончин) в разработанной ими системе BCI. В их исследовании было описано устройство для набора текста. На экране изображалась таблица доступных для набора символов, строки и столбцы которой выделялись в случайном порядке, в качестве целевого стимула выступало выделение столбца/строки с желаемым на данный момент символом, отвлекающих стимулов - выделение остальных столбцов/строк.
+	\item
+	{\bf Steady-State Visual Evoked Potentials (SSVEPs)}
+	\par SSVEPs -- осцилляции, имеющие место в данных, полученных при помощи затылочных сенсоров, могут быть индуцированы путём наблюдения часто повторяющейся анимации. Подобного рода стимуляция порождает колебания той же частоты в регистрируемых сигналах головного мозга. В исследованиях по тематике нейрокомпьютерных интерфейсов потенциалы этого типа используются при одновременной демонстрации стимулов с разной частотой. Таким образом, пользователь путём концентрации на конкретном стимуле имеет возможность управлять мозговой активностью.
+	\item
+	{\bf Motor-Related Potentials (MRPs)}
+	\par MRPs -- продолжительные отрицательные потенциалы, связанные с ожиданием или ментальным представлением выполняемого движения или действия, имеют место в сенсомоторной части скальпа в начале выполнения движения или в процессе ментального представления движения.
+	\end{itemize}
+		\subsubsection{Частотная мозговая активность}
+	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами.
+	\par TODO: таблица частот для ритмов
+	\begin{itemize}
+	\item
+	{\bf Сенсомоторные ритмы}
+	\par Колебания $\mu$-ритма могут быть обнаружены в сенсомоторной части сальпа, когда пользователь не выполняет никаких действий. Если же движение некоторой части тела выполняется или выполняется ментальное задание по представлению данного движения, амплитуда колебаний уменьшается. Кроме того, представляемые или выполняемые движения порождают изменения в амплитуде $\beta$-ритма. Изменения данных ритмов отражаются на части скальпа, отвечающей перемещаемой части тела, в связи с этим представляемые и выполняемые движения различных частей тела могут быть отличимы друг от друга. Происходящие изменения для пользователей с небольшим опытом использования нейрокомпьютерных интерфейсов обычно оказываются недостаточно весомыми для адекватного функционирования распознающих алгоритмов.
+	\item
+	{\bf Другая активность}
+	\par В качестве триггеров возникновения колебаний потенциалов могут быть использованы когнитивные задания, отличные от представления движений, например, вычисления, слуховые представления, представление движения трёхмерного объекта в пространстве и др.
+	\end{itemize}
+	\subsection{Нейрокомпьютерные интерфейсы на основе волн P300}
+	\subsubsection{Вызванные потенциалы и волны P300}
+	\par Волны P300 были открыты в исследовании .... С тех пор имело место множество исследований по изучению природы этих колебаний путём изменения различных характеристик проводимых экспериментов, таких как способ демонстрации стимула, пол, возраст испытуемых, наличие заболеваний  и пр.
+	\par Различные парадигмы могут быть использованы для выявления волн P300. В качестве стимулов могут быть использованы слуховые, визуальные, тактильные, обонятельные, вкусовые стимулы. Тем не менее, в силу практичности чаще всего используются визуальные и слуховые стимулы, а также сочетание обоих. В основном в большинстве исследований применяются две парадигмы: оригинальная (oddball paradigm) и трёхстимульная (three-stimulus).
+	\par Оригинальная парадигма подразумевает использование двух стимулов (целевого и отвлекающего), демонстрируемых в произвольном порядке, причём демонстрация целевого стимула является гораздо более редким событием по сравнению с демонстрацией отвлекающего стимула. Испытуемымому же необходимо концентрироваться исключительно на целевом стимуле и игнорировать появление отвлекающего стимула.
+	\par Трёхстимульная парадигма является модификацией оригинальной парадигмы. В данном случае также присутствиет так называемый Оотвлекающий стимул, редко появляющийся в последовательности целевых и нецелевых стимулов. Испытуемые не информируются о наличии подобного рода стимула в процессе инструктажа.
+	\par При использовании описанных парадигм наблюдаются различные типы волн P300. Применение оригнальной парадигмы позволяет обнаружить т.н. волны P3b, имеющие место в течение 300-500 мс, только если пользователь концентрируется на стимуле. Если же пользователь не уделяет внимание стимулу, целевой стимул при ипользовании оригинальной парадигмы порождает другой тип волны P300, называемый P3a, имеющие место в течение 200-400 мс. При применении трёхстимульной парадигмы целевой стимул также порождает волны P3b, Отвлекающий же стимул порождает волны P3a. Отношение между каждой из парадигм и описанными типами волн P300 изображены на на рис.~\ref{paradigms}.
+	\subsubsection{Факторы, влияющие на ...}
+	\par Кроме влияния различных экспериментальных парадигм, упомянутых выше, волны P300 также подвергаются влиянию многих других факторов? пtречисленных ниже:
+	\begin{itemize}
+	\item
+	{\bf Веростность появления целевого стимула}
+	\par Амплитуда волны P3b обратно пропорциональна вероятности появления целевого стимула: редкое появление целевого стимула порождает высокий пик волны, в то время как высокая вероятность появления стимула слабо отражается на сигнале. В основном при проведении экспериментов используется вероятность, примерно равная 10\% для более надёжного выявления волн P300.  Кроме того, на амплитуду волны P3b также влияет локальная вероятность появления целевого стимула.
+	\item
+	{\bf Межстимульный интервал}
+	\par Амплитуда волны P3b прямj пропорциональна продолжительности межстимульного интервала (период времени между двумя последовательными стимулами).
+	\item
+	{\bf Привыкание}
+	\par Амплитуда волны P3a снижается с течением времени, поскольку из-за демонстрации большого количества Отвлекающих стимулов данное событие становится ожидаемым для испытуемого. В то же время амплитуда волны P3b практически не подвержена влиянию этого фактора.
+	\item
+	{\bf Внимание}
+	\par Амплитуда волны P3b в большой мере зависит от степени концентрации пользователя. Более детально, волны P3b полностью исчезают, если пользователь не вовлечен в активное выполнение заданий. В то же время волны P3a не подвергнуты влиянию данного фактора.
+	\item
+	{\bf Сложность заданий}
+	\par Латентность волны P3b прямо пропорциональна сложности выполняемного  задания, в то время как амплитуда обратно пропорционально этой величине. К примеру, целевые стимулы, сильно отличающиеся от нецелевых, ведут к более высокой амплитуде волны P3b по сравнению со случаем слабых отличий между целевыми и нецелевыми стимулами.  Другой эффект наблюдается для волн P3a. Повышение сложности вычленения целевых и нецелевых стимулов в трёхстимульной парадигме ведёт к повышению амплитуды волн P3a.
+	\end{itemize}
+	\par TODO: выводы про P3a и P3b?
+
 %	\par TODO: Нужен ли отдельный раздел для Хиперы? Если да, то как назвать этот раздел и раздел про Хиперу?
 %	\par В качестве динамического объекта, приводимого в движение при помощи ментальных команд, было использовано устройство {\it Khepera II}. Данное устройство было разработано швейцарской компанией {\it K-team Corporation}.
 %	\par Устройство оснащено двумя моторами, приводящими в движение колёса по бокам робота. Устройство управляется путём осуществления команд установки либо изменения скоростей вращения каждого из моторов. (TODO: Нужно ли писать детали о том, как подключается робот к компьютеру, какими командами управляется и т.д.?) Таким образом, имеется возможность осуществления прямолинейного движения либо поворота устройства в плоскости его движения, тем самым команды поворота по и против часовой стрелке на фиксированный угол относительно текущей траектории позволяют управлять движением устройства на плоскости без остановки. Если же, помимо того, использовать команды начала движения и остановки устройства, появится возможность полного управления устройством при движении на плоскости.
 
-\section{Введение в нейрокомпьютерные интерфейсы}
+\section{Методы распознавания данных ЭЭГ}
 	\par TODO: Вставить ссылки на источники
-	\par Главная цель исследований в области нейрокомпьютерных интерфейсов -- разработка систем, позволяющих обездвиженным пользователям обмениваться информацией и взаимодействовать с другими людьми, а также контролировать различные элементы их окружения. Кроме того, подобные системы могут быть использованы для улучшения контроля над сложными многозадачными операциями.
-	\par В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
+	\par После получения данных при помощи электроэнцефалографа необходимо применение алгоритма, позволяющего определить желаемое для пользователя действие. Входными данными для этого алгоритма являются сигналы ЭЭГ, регистрируемые в процессе демонстрации стимулов.В большинстве существующих на текущий момент исследований по данной тематике задача классификации сигналов разбивается на три большие подзадачи: предобработка сигнала (в целях удаления шумовых компонент), формирование признакового пространства и классификация объектов в построенном признаковом пространстве. Необходимо отметить, что наибольшее влияние на итоговое качество классификации оказывает влияние то, насколько успешно была решена задача формирования признакового пространства. Общая схема работы нейрокомпьютерных интерфейсов представлена на рис.~\ref{bci}.
 
 	\begin{figure}[H]
 	\center{\includegraphics[width=0.9\textwidth]{bci.png}}
@@ -188,15 +245,16 @@
 	\label{bci}
 	\end{figure}
 
-
 	\subsection{Предобработка}
 	\par Предобработка сигнала проводится с целью удаления артефактов (спонтанные сокращения мышц, моргание и т.п.), а также нейтрализации имеющихся шумовых компонент. Кроме того, зачастую интересующая информация содержится в определённом диапазоне частот, а остальные компоненты являются малоинформативными.
 	\begin{itemize}
 	\item {\bf Удаление постоянного амплитудного смещения}
 	\par {\it Постоянное амплитудное смещение} или {\it DC offset} (англ. {\it direct current offset}, постоянное смещение потока) ~--- отклонение волновой формы относительно оси нулевого уровня сигнала. Амплитудное смещение, наблюдаемое в электроэнцефаллограмме, может быть разложено на две основные составляющие: постоянное смещение, возникающее из-за технических особенностей передачи данных, и  смещение, возникающее из-за взаимодействия электрической цепи с потенциалом тела.
 	\item {\bf Полосовая фильтрация}
-	\par TODO: написать про фильтры НЧ, ВЧ, полосы
-	\par В электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном, а также амплитудой, формой волны и другими характеристиками. Считается, что каждый ритм соответствует некоторому определённому состоянию мозга и связан с определёнными церебральными механизмами. С целью выявления компонент, отвечающих соответствующим ритмам, применяются методы фильтрации в заданном диапазоне частот. Диапазон частот выбирается, исходя из априорной информации о ритмах. К примеру, для выделения компоненты, отвечащей за воображаемые движения различных частей тела, используется диапазон $\mu$-ритма (8--13 Гц).
+	\par Как было упомянуто выше, в электроэнцефалограмме здорового человека выделяют несколько характерных составляющих электрических колебаний, называемых ритмами, различающихся частотным диапазоном. С целью выявления компонент, отвечающих соответствующим ритмам, применяются методы фильтрации в заданном диапазоне частот. Диапазон частот выбирается, исходя из априорной информации о ритмах. К примеру, для выделения компоненты, отвечащей за воображаемые движения различных частей тела, используется диапазон $\mu$-ритма (8--13 Гц).
+	\par Фильтрами нижних частот называется тип фильтров, эффективно пропускающих частотный спектр сигнала ниже некоторой частоты (т.н. частоты среза) и уменьшающий (подавляющий) частоты сигнала выше этой частоты. Степень подавления каждой частоты зависит от вида фильтра. Фильтр верхних частот, напротив, пропускает частоты выше частоты среза и подавляет низкие частоты.
+	\item {\bf Windsorization}
+	\par С целью снижения влияния артефактов, имеющих место в данных ЭЭГ, таких как моргание, движения глаз, мышечная активность и др., может применяться ... данных с каждого электрода. Для каждого электрода вычисляются значения перцентилей среза (см. рис. ~\ref{windsorization}), затем значения, лежащие ниже или выше перцентилей среза замещаются соответствующими значениями.
 	\item {\bf Отбор электродов}
 	\par Современные электроэнцефалографы оснащены десятками электродов, однако информация, получаемая при помощи такого количества сенсоров, является избыточной. Кроме того, увеличение числа электродов ведёт к повышению стоимости устройства и времени на подготовку к использованию, что является недопустимым для электроэнцефалографов, разработанных для коммерческого использования. В связи с этим в современных исследованиях по тематике нейрокомпьютерных интерфейсов наиболее распространены два подхода к решению данной проблемы:
 	\begin{enumerate}
